--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
           
               <div class="section" id="introduction">
                 <h2>About</h2>
-                <p>Hello! I am Avoy Jana, a very open person to all in this Era. I am trying to conserve my all works, being embedded in this webpage. 
-                    Me, always an average person, but a good explorer in viewpoint of Physics or anything, I think. 
+                <p>Hello! I am Avoy Jana, a very open person to all in this Era. I am trying to conserve all my works, which are embedded in this webpage. 
+                    I am always an average person, but a good explorer from the viewpoint of Physics or anything. 
               </div>
               <div class="section" id="Curriculam Vitae">
                 <h2>CV and SoP </h2>
@@ -214,18 +214,26 @@
                   <p>&bull; ................. &bull; Mathematical Physics</p>
               </div>
               <div class="section" id="publications">
-                <h2>Ongoing Book</h2>
+                <h2>Book</h2>
                 <details>
                   <summary>Free Space Green Functions of LPDEs through Integral Transform Techniques, Avoy Jana</summary>
                   <iframe src="GFB.pdf" width="100%" height="1000px"></iframe>
                 </details>
               </div>
               <div class="section" id="publications">
-                <h2> Ongoing Publications</h2>
+                <h2> Self Research</h2>
                 <details>
-                  <summary>Radial Uncertainty Product for Spherically Symmetric Potential in Position Space, Avoy Jana</summary>
-                  <img src="SSP.png" style="width: 100%; max-width: none;"  />
-                </details>
+                <summary>
+                Radial Uncertainty Product for Spherically Symmetric Potential in Position Space, Avoy Jana
+                </summary>
+
+               <p>
+               <a href="https://arxiv.org/pdf/2501.14831" target="_blank">
+               </a>
+               </p>
+               </details>
+
+
               </div>
               <div class="section" id="Modelling Physics Project">
                   <h2>Modelling Physics Project</h2>
