--- a/index.html
+++ b/index.html
@@ -221,20 +221,27 @@
                 </details>
               </div>
               <div class="section" id="publications">
-                <h2> Self Research</h2>
-                <details>
-                <summary>
-                Radial Uncertainty Product for Spherically Symmetric Potential in Position Space, Avoy Jana
-                </summary>
+                 <h2>Self Research</h2>
 
-               <p>
-               <a href="https://arxiv.org/pdf/2501.14831" target="_blank">
-               </a>
-               </p>
-               </details>
+                   <div class="paper-item">
+                  • <a href="https://arxiv.org/pdf/2502.03565" target="_blank">Generalized Radial Uncertainty Product for d-Dimensional Hydrogen Atom</a>, arXiv:2502.03565, 2025
+                  </div>
 
+                  <div class="paper-item">
+                  • <a href="https://arxiv.org/pdf/2502.19462" target="_blank">A Proof of Generalized Kramers-Pasternack Relation using Hyper-Radial Equation</a>, arXiv:2502.19462, 2025
+                  </div>
+
+                   <div class="paper-item">
+                   • <a href="https://arxiv.org/pdf/2501.14831" target="_blank">Radial Uncertainty Product for Spherically Symmetric Potential in Position Space</a>, arXiv:2501.14831, 2025
+                   </div>
+
+                  <div class="paper-item">
+                   • <a href="https://www.researchgate.net/profile/Avoy-Jana/publication/389445591_A_Computer_Model_for_Band_Structure_of_1D_Arbitrary_Periodic_Potential/links/67c2c609f5cb8f70d5c3ef1d/A-Computer-Model-for-Band-Structure-of-1D-Arbitrary-Periodic-Potential.pdf" target="_blank">A Computer Model for Band Structure of 1D Arbitrary Periodic
+Potential</a>, 10.13140/RG.2.2.26038.82241, 2024
+                   </div>
 
               </div>
+
               <div class="section" id="Modelling Physics Project">
                   <h2>Modelling Physics Project</h2>
                   <ul>
