--- a/index.html
+++ b/index.html
@@ -409,23 +409,23 @@
                             <p>Two Higgs Doublet Model</p>
                             <li><a href="https://drive.google.com/file/d/10PZU9DXw_UUeSdeCqEOWdbYv1LNkroPQ/view?usp=drivesdk">Higgs mechanism in the general Two-Higgs-Doublet Model by Degée, Audrey <span style="color: red;">(Potential description)</span> </a></li>
                             <li><a href="https://doi.org/10.1007/JHEP04%282022%29172"> Cornering the Two Higgs Doublet Model Type II by Oliver Atkinson, Matthew Black, Alexander Lenz, Aleksey Rusov, James Wynne <span style="color: red;">(Type II 2HDM - Main )</span><a/></li>
-                            <li><a href="https://doi.org/10.1016/j.physrep.2012.02.002">Theory and phenomenology of two-Higgs-doublet models by G. C. Branco, P. M. Ferreira, L. Lavoura, M. N. Rebelo, Marc Sher, Joao P. Silva <span style="color: red;">(Main Ref. 3)</span> </a></li> 
-                            <li><a href="https://doi.org/10.1007/JHEP02%282017%29121"> Strong First Order Electroweak Phase Transition in the CP-Conserving 2HDM Revisited by P. Basler, M. Krause, M. Muhlleitner, J. Wittbrodt, A. Wlotzka <span style="color: red;">(Main Ref. 19)</span> </a></li>
-                            <li><a href="https://doi.org/10.48550/arXiv.2003.06170"> Revisiting wrong sign Yukawa coupling of type II two-Higgs-doublet model in light of the recent LHC data by Lei Wang, Hong-Xin Wang, Xiao-Fang Han <span style="color: red;">(Main Ref. 23)</span> </a></li> 
-                            <li><a href="https://doi.org/10.1007/JHEP01%282021%29045"> Comparative Studies of 2HDMs under the Higgs Boson Precision Measurements by Tao Han, Shuailong Li, Shufang Su, Wei Su, Yongcheng Wu <span style="color: red;">(Main Ref. 24)</span> </a></li>  
+                            <li><a href="https://doi.org/10.1016/j.physrep.2012.02.002">Theory and phenomenology of two-Higgs-doublet models by G. C. Branco, P. M. Ferreira, L. Lavoura, M. N. Rebelo, Marc Sher, Joao P. Silva <span style="color: red;"></span> </a></li> 
+                            <li><a href="https://doi.org/10.1007/JHEP02%282017%29121"> Strong First Order Electroweak Phase Transition in the CP-Conserving 2HDM Revisited by P. Basler, M. Krause, M. Muhlleitner, J. Wittbrodt, A. Wlotzka <span style="color: red;"></span> </a></li>
+                            <li><a href="https://doi.org/10.48550/arXiv.2003.06170"> Revisiting wrong sign Yukawa coupling of type II two-Higgs-doublet model in light of the recent LHC data by Lei Wang, Hong-Xin Wang, Xiao-Fang Han <span style="color: red;"></span> </a></li> 
+                            <li><a href="https://doi.org/10.1007/JHEP01%282021%29045"> Comparative Studies of 2HDMs under the Higgs Boson Precision Measurements by Tao Han, Shuailong Li, Shufang Su, Wei Su, Yongcheng Wu <span style="color: red;"></span> </a></li>  
                             <p>Dark Matter Problem</p>    
-                            <li><a href="https://doi.org/10.48550/arXiv.1502.01320"> TASI 2014 Lectures: The Hunt for Dark Matter by Graciela B. Gelmini <span style="color: red;">(Pradipta suggested)</span> </a></li>
-                            <li><a href="https://doi.org/10.1103/PhysRevD.103.115016"> Metastable Conformal Dark Matter by Philippe Brax, Kunio Kaneta, Yann Mambrini, Mathias Pierre <span style="color: red;">(Pradipta suggested)</span> </a></li>
+                            <li><a href="https://doi.org/10.48550/arXiv.1502.01320"> TASI 2014 Lectures: The Hunt for Dark Matter by Graciela B. Gelmini <span style="color: red;"></span> </a></li>
+                            <li><a href="https://doi.org/10.1103/PhysRevD.103.115016"> Metastable Conformal Dark Matter by Philippe Brax, Kunio Kaneta, Yann Mambrini, Mathias Pierre <span style="color: red;"></span> </a></li>
                         </ul>
                     </details>
               </div>
               <div class="section" id="contact">
                 <h2>Contact</h2>
                 <p>If you would like to get in touch, please contact me via email at <a href="avoyjana2000@gmail.com">avoyjana2000@gmail.com</a>.</p>
-                <p>Place: Room ED-09, Girnar House, IITD</p>
+                <p>Place: </p>
                 <p style="display: flex; justify-content: space-between;">
-                     <span>Phone: Mail me to Connect</span>
-                     <span style="color: blue;">Hosted : 05th March, 2024 Last Updated : 11th Nov, 2024</span>
+                     <span>Phone: </span>
+                     <span style="color: blue;">Hosted : 05th March, 2024 Last Updated : 1st Jan, 2026</span>
                 </p>
               </div>
             
