--- a/index.html
+++ b/index.html
@@ -272,44 +272,36 @@
                 <h2>Coding Skill</h2>
                 <h3>HTML+CSS</h3>
                 <ul>
-                <li><a href="https://avoyjana.github.io/Academic-Profile/"> 🔵 This Web page</a></li>
-                <li><a href="https://avoyjana.github.io/YourArijit.github.io/"> 🔵 Enjoy Arijit Singh's world</a></li>
-                <li><a href="https://avoyjana.github.io/RupamIslam/"> 🔵 It's RUPAM ISLAM !</a></li>
-                <li><a href="https://avoyjana.github.io/AlarmClock/"> 🔵 Alarm Clock </a></li>
-                <li><a href="https://avoyjana.github.io/randomrabi.github.io/"> 🔵 Randomly pick Rabindra Sangeet</a></li>
-                <li><a href="https://avoyjana.github.io/nettest1.github.io/"> 🔵 CSIR NET Mock Test 1 : Physical Science</a></li>
-                <li><a href="https://avoyjana.github.io/nettest2.github.io/"> 🔵 CSIR NET Mock Test 2 : Physical Science</a></li>
+                <li><a href="https://avoyjana.github.io/Academic-Profile/"> This Web page</a></li>
+                <li><a href="https://avoyjana.github.io/YourArijit.github.io/"> Enjoy Arijit Singh's world</a></li>
+                <li><a href="https://avoyjana.github.io/RupamIslam/"> It's RUPAM ISLAM !</a></li>
+                <li><a href="https://avoyjana.github.io/AlarmClock/"> Alarm Clock </a></li>
+                <li><a href="https://avoyjana.github.io/randomrabi.github.io/"> Randomly pick Rabindra Sangeet</a></li>
+                <li><a href="https://avoyjana.github.io/nettest1.github.io/"> CSIR NET Mock Test 1 : Physical Science</a></li>
+                <li><a href="https://avoyjana.github.io/nettest2.github.io/"> CSIR NET Mock Test 2 : Physical Science</a></li>
                 </ul>
                 <h4>PYTHON</h4>
-                <p>I have created a Python debugger here, you can give any input and see the output. All the code is available on my GitHub page.</p>
+                <p>I have created some Python debuggers here; you can give any input and see the output. All the code is available on my GitHub page.</p>
                 <ul>
-                <li><a href="cubicspline.html" target="_blank" class="open-link"> 🔵 Cubic Spline Interpolation</a></li>
+                <li><a href="cubicspline.html" target="_blank" class="open-link"> Cubic Spline Interpolation</a></li>
                 </ul>
             </div>
             <div class="section" id="teaching">
-                  <h2>MY NOTES</h2>
-                  <p>I'm trying to making subject's notes in more intuitive way, rather than a represntative way.</p>
+                  <h2>STUDY NOTES</h2>
                   <!-- Inserted Code Starts -->
                   <div id="contentContainer">
-                    <h2 id="nmTitle">1. Newtonian Mechanics (NM)</h2>
-                    <div id="nmContainer">
-                      <ul id="nmList">
-                        <li><a href="#" onclick="loadPDF('')"> 🔵 Newton's law</a></li>
-                        <li><a href="#" onclick="loadPDF('your-file-id-2')"> 🔵 Kinematics</a></li>
-                      </ul>
-                    </div>
                 
-                    <h2 id="cmTitle">2. Classical Mechanics (CM) </h2>
+                    <h2 id="cmTitle">1. Classical Mechanics (CM) </h2>
                     <div id="cmContainer">
                       <ul id="cmList">
-                        <li><a href="#" onclick="loadPDF('196CLxmEKyPiguDxL-qI7Qub1XQew3_VY')"> 🔵 Generalised co-ordinate and, constraints</a></li>
-                        <li><a href="#" onclick="loadPDF('19KLIly_86iOnrCUq5BVY-PwIF2uHdCTb')"> 🔵 Lagrangian Mechanics</a></li>
-                        <li><a href="#" onclick="loadPDF('19Pn9Cm23a2y5UrsyPh0MAIz4VjaL5tp8')"> 🔵  Lagrangian of Rigid body</a></li>
-                        <li><a href="#" onclick="loadPDF('19SRgSVilsxpQ0vhiZVjtmZUNQ0g4CZT2')"> 🔵  Action problems</a></li>
-                        <li><a href="#" onclick="loadPDF('')"> 🔵  Lagrange undetermined multiplier</a></li>
-                        <li><a href="#" onclick="loadPDF('19ZUWpyFPx3a-7ypO_MFWQdYUAuo_BpVW')"> 🔵  Hamiltonian Mechanics</a></li>
-                        <li><a href="#" onclick="loadPDF('19dVUmOAbbvIEklgVKV7Kk-uC8RxR2cKm')"> 🔵  Poisson bracket</a></li>
-                        <!-- Add more PDF links as needed -->
+                        <li><a href="#" onclick="loadPDF('196CLxmEKyPiguDxL-qI7Qub1XQew3_VY')"> Generalised co-ordinate and, constraints</a></li>
+                        <li><a href="#" onclick="loadPDF('19KLIly_86iOnrCUq5BVY-PwIF2uHdCTb')"> Lagrangian Mechanics</a></li>
+                        <li><a href="#" onclick="loadPDF('19Pn9Cm23a2y5UrsyPh0MAIz4VjaL5tp8')">  Lagrangian of Rigid body</a></li>
+                        <li><a href="#" onclick="loadPDF('19SRgSVilsxpQ0vhiZVjtmZUNQ0g4CZT2')">  Action problems</a></li>
+                        <li><a href="#" onclick="loadPDF('')">  Lagrange undetermined multiplier</a></li>
+                        <li><a href="#" onclick="loadPDF('19ZUWpyFPx3a-7ypO_MFWQdYUAuo_BpVW')">  Hamiltonian Mechanics</a></li>
+                        <li><a href="#" onclick="loadPDF('19dVUmOAbbvIEklgVKV7Kk-uC8RxR2cKm')">  Poisson bracket</a></li>
+                        <p>For more, please email me.</p>
                       </ul>
                     </div>
                   </div>
@@ -357,7 +349,7 @@
                     <details>
                         <summary>
                            <h2>PHYSICS E-BOOK<br>
-                               These are collapsible content, click here.</h2>
+                               These are collapsible contents. Click here.</h2>
                         </summary>
                         <ul>
                             <p>Classical Mechanics</p>
@@ -392,7 +384,7 @@
                     <details>
                         <summary>
                            <h2>HEP (Phenomenology) Reference<br>
-                               These are collapsible content, click here.</h2>
+                               These are collapsible contents. Click here.</h2>
                         </summary>
                         <ul>
                             <p>CPT transformations</p>
