--- a/index.html
+++ b/index.html
@@ -221,6 +221,10 @@
               <div class="section" id="publications">
                  <h2>Self Research</h2>
 
+                  <div class="paper-item">
+                  • <a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=Gopb8BwAAAAJ&citation_for_view=Gopb8BwAAAAJ:_FxGoFyzp5QC" target="_blank">SSRN 5671800, 2025</a>, A Unified Fourier Transform Approach to Electrostatics: Potentials & Self-Energies
+                  </div> 
+                  
                    <div class="paper-item">
                   • <a href="https://arxiv.org/pdf/2502.03565" target="_blank">arXiv:2502.03565, 2025</a>, Generalized Radial Uncertainty Product for d-Dimensional Hydrogen Atom
                   </div>
@@ -286,6 +290,19 @@
                 <li><a href="cubicspline.html" target="_blank" class="open-link"> Cubic Spline Interpolation</a></li>
                 </ul>
             </div>
+                          <div class="section" id="literature">
+                    <details>
+                        <summary>
+                           <h2>PHYSICS INTERVIEW FAQ<br>
+                               These are collapsible contents. Click here.</h2>
+                        </summary>
+                        <ul>
+                            <li><a href="https://drive.google.com/file/d/1-MsFRwbS7sWu_IhQ2BGI0FfdkX7cJgSE/view?usp=drivesdk">FAQ1</a></li>
+                            <li><a href="https://drive.google.com/file/d/1-QriB_QcdGFzzTm2gdTxIZ4J8MvSk6a9/view?usp=drivesdk">FAQ2</a></li>
+                            
+                        </ul>
+                    </details>
+              </div>
             <div class="section" id="teaching">
                   <h2>STUDY NOTES</h2>
                   <!-- Inserted Code Starts -->
