--- a/index.html
+++ b/index.html
@@ -358,17 +358,15 @@
                   <!-- Inserted Code Ends -->
               </div>
               <div class="section" id="literature">
-                    <details>
-                        <summary>
-                           <h2>PHYSICS E-BOOK<br>
-                               These are collapsible contents. Click here.</h2>
-                        </summary>
+                           <h2>PHYSICS E-BOOK</h2
                         <ul>
                             <p>Classical Mechanics</p>
                             <li><a href="https://drive.google.com/file/d/1-MsFRwbS7sWu_IhQ2BGI0FfdkX7cJgSE/view?usp=drivesdk">Goldstien</a></li>
                             <li><a href="https://drive.google.com/file/d/1-QriB_QcdGFzzTm2gdTxIZ4J8MvSk6a9/view?usp=drivesdk">JC Upadhyaya</a></li>
                             <li><a href="https://drive.google.com/file/d/1-Sy3wWvP_fw9MXzFCohzOYet-frVLc_-/view?usp=drivesdk">Rana & Joag</a></li>
                             <li><a href="https://drive.google.com/file/d/1-cy42kVwL0ydUZ8wz-n59Sl6r-xfIi6a/view?usp=drivesdk">YK Lim</a></li>
+                            <p>EMT</p>
+                            <li><a href="https://drive.google.com/file/d/1JmvLz3_5BRcsyGp48qlIgfnBj_WlTHcz/view?usp=drivesdk">Modern Electrodynamics, ANDREW ZANGWILL</a></li>
                             <p>Quantum Field Theory</p>
                             <li><a href="https://drive.google.com/file/d/10-LpjBAb4mjYQAwkA0xEZxvxXvkCBKvz/view?usp=drivesdk">Peskin & Schroeder</a></li>
                             <li><a href="https://drive.google.com/file/d/1020ENknbNxY7yCb9SAtkS5b8ZlR0U8tW/view?usp=drivesdk">Mark Srednicki</a></li> 
@@ -390,7 +388,6 @@
                             <li><a href="https://drive.google.com/file/d/1wQS7WuJxwr1h49UYoPJ46Lqdlsk1ERxl/view?usp=drive_link"> Numerical Mathematics and Computing by E ward cheney and David kincaidr</a></li>
                             
                         </ul>
-                    </details>
               </div>
               <div class="section" id="literature">
                     <details>
