--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@
                             <li><a href="https://drive.google.com/file/d/1OxZ-C2_35ABMmA0Lu1zshL-_AuoXD7RB/view?usp=drivesdk">FAQ1</a></li>
                             <li><a href="https://drive.google.com/file/d/14awAWyA45KsipzGV9UL7WvuuY4Fs1xOq/view?usp=drivesdk">FAQ2</a></li>
                             <li><a href="https://drive.google.com/file/d/10iu8cDueA0CygqFk54UigoSHsCFmswz5/view?usp=drivesdk">FAQ3</a></li> 
+                            <li><a href="https://drive.google.com/file/d/19zhVRIb1PynfDN0HJFccqhd1xPKIVNfV/view?usp=drivesdk">FAQ4</a></li>
                         </ul>
             </div>
             <div class="section" id="teaching">
