--- a/index.html
+++ b/index.html
@@ -297,6 +297,7 @@
                             <li><a href="https://drive.google.com/file/d/14awAWyA45KsipzGV9UL7WvuuY4Fs1xOq/view?usp=drivesdk">FAQ2</a></li>
                             <li><a href="https://drive.google.com/file/d/10iu8cDueA0CygqFk54UigoSHsCFmswz5/view?usp=drivesdk">FAQ3</a></li> 
                             <li><a href="https://drive.google.com/file/d/19zhVRIb1PynfDN0HJFccqhd1xPKIVNfV/view?usp=drivesdk">FAQ4</a></li>
+                            <li><a href="https://drive.google.com/file/d/1bC1wwgmrpg9ApApqhiOgrSOBbfh_2K00/view?usp=drivesdk">FAQ5</a></li>
                         </ul>
             </div>
             <div class="section" id="teaching">
@@ -390,6 +391,7 @@
                             
                         </ul>
               </div>
+             <!--
               <div class="section" id="literature">
                     <details>
                         <summary>
@@ -421,6 +423,7 @@
                         </ul>
                     </details>
               </div>
+            --->
               <div class="section" id="contact">
                 <h2>Contact</h2>
                 <p>If you would like to get in touch, please contact me via email at <a href="avoyjana2000@gmail.com">avoyjana2000@gmail.com</a>.</p>
