--- a/index.html
+++ b/index.html
@@ -173,8 +173,16 @@
           
               <div class="section" id="introduction">
                 <h2>About</h2>
-                <p>Hello! I am Avoy Jana, a very open person to all in this Era. I am trying to conserve all my works, which are embedded in this webpage. 
-                    I am always an average person, but a good explorer from the viewpoint of Physics or anything. 
+                <p>Hello! I am Avoy Jana, an open-minded individual living in this modern era. Through this webpage, I aim to preserve and share my work, thoughts, and explorations.
+
+I consider myself an average person, but a passionate explorer—especially from the viewpoint of Physics and other areas that spark curiosity. I believe learning comes from questioning, observing, and constantly exploring the unknown.
+
+I would also like to mention a few close friends whom I deeply trust. They have motivated me during my hardest days, stood by me when I felt like nothing, and helped me move forward with confidence and hope.</p>
+                <ul>
+    <li><strong>Molla Suman Rahaman</strong> — MSc in IIT Delhi, Research Scholar in IISER Mohali</li>
+    <li><strong>Prasanta Das</strong> — MTech in IIT Delhi</li>
+    <li><strong>Tamal Majumdar</strong> — MSc in IIT Delhi, Research Associate in IIT Delhi</li>
+  </ul>
               </div>
               <div class="section" id="Curriculam Vitae">
                 <h2>Curriculam Vitae</h2>
@@ -183,7 +191,7 @@
                             <summary>Curriculam Vitae (CV)</summary>
                             <img src="cv.jpg" style="width: 100%; max-width: none;"  />
                         </details> 
-                        <p>JAM Q (2023) , CSIR NET(2024) LS Q, CSIR NET(2025) JRF Q &forall; Q = Qualified </p>
+                        <p>JAM Q (2023) , CSIR NET(2024) LS Q, CSIR NET(2024) JRF Q &forall; Q = Qualified </p>
                     </div>
                </div>
         
