--- a/index.html
+++ b/index.html
@@ -301,6 +301,11 @@ I would also like to mention a few close friends whom I deeply trust. They have 
                             <li><a href="https://drive.google.com/file/d/10iu8cDueA0CygqFk54UigoSHsCFmswz5/view?usp=drivesdk">FAQ3</a></li> 
                             <li><a href="https://drive.google.com/file/d/19zhVRIb1PynfDN0HJFccqhd1xPKIVNfV/view?usp=drivesdk">FAQ4</a></li>
                             <li><a href="https://drive.google.com/file/d/1bC1wwgmrpg9ApApqhiOgrSOBbfh_2K00/view?usp=drivesdk">FAQ5</a></li>
+                            <li><a href="https://drive.google.com/file/d/1M1h1PaCOj7zLmbCZrOfNvgD9FsjkacJv/view?usp=drivesdk">FAQ6</a></li>
+                            <li><a href="https://drive.google.com/file/d/1cUwwQVf0qsbhDoIs-DHa-7R9I77HSanp/view?usp=drivesdk">FAQ7</a></li>
+                            <li><a href="https://drive.google.com/file/d/1_ywHux0HocqGHQhwHKkc9YiTKtfgNUvo/view?usp=drivesdk">FAQ8</a></li>
+                            <li><a href="https://drive.google.com/file/d/1MQA0jOhL5_suO5bPwYHF1pRdLrRpqTQc/view?usp=drivesdk">FAQ9</a></li>
+                            <li><a href="https://drive.google.com/file/d/18KgO_cuY2UI83O-0oUannrqECyd-gsHa/view?usp=drivesdk">FAQ10</a></li>
                         </ul>
             </div>
             <div class="section" id="teaching">
