--- a/index.html
+++ b/index.html
@@ -297,10 +297,9 @@ I would also like to mention a few close friends whom I deeply trust. They have 
                     <h2>PHYSICS INTERVIEW FAQ</h2>  
                         <ul>
                             <li>
-                              <a href="https://drive.google.com/file/d/1OxZ-C2_35ABMmA0Lu1zshL-_AuoXD7RB/view?usp=drivesdk">FAQ1</a> |
-                              <a href="https://drive.google.com/file/d/1OxZ-C2_35ABMmA0Lu1zshL-_AuoXD7RB/view?usp=drivesdk" target="_blank">FAQ1 Answer</a>
+                              <a href="https://drive.google.com/file/d/1OxZ-C2_35ABMmA0Lu1zshL-_AuoXD7RB/view?usp=drivesdk">FAQ1 (Free)</a> |
+                              <a href="https://drive.google.com/file/d/18qTc-qcF5pcTDjoZiM6Si42_Ef0UxJih/view?usp=drivesdk">FAQ1A (Paid)</a>
                             </li>
-
                             <li><a href="https://drive.google.com/file/d/1OxZ-C2_35ABMmA0Lu1zshL-_AuoXD7RB/view?usp=drivesdk">FAQ1</a></li>
                             <li><a href="https://drive.google.com/file/d/14awAWyA45KsipzGV9UL7WvuuY4Fs1xOq/view?usp=drivesdk">FAQ2</a></li>
                             <li><a href="https://drive.google.com/file/d/10iu8cDueA0CygqFk54UigoSHsCFmswz5/view?usp=drivesdk">FAQ3</a></li> 
