--- a/index.html
+++ b/index.html
@@ -300,7 +300,6 @@ I would also like to mention a few close friends whom I deeply trust. They have 
                               <a href="https://drive.google.com/file/d/1OxZ-C2_35ABMmA0Lu1zshL-_AuoXD7RB/view?usp=drivesdk">FAQ1 (Free)</a> |
                               <a href="https://drive.google.com/file/d/18qTc-qcF5pcTDjoZiM6Si42_Ef0UxJih/view?usp=drivesdk">FAQ1A (Paid)</a>
                             </li>
-                            <li><a href="https://drive.google.com/file/d/1OxZ-C2_35ABMmA0Lu1zshL-_AuoXD7RB/view?usp=drivesdk">FAQ1</a></li>
                             <li><a href="https://drive.google.com/file/d/14awAWyA45KsipzGV9UL7WvuuY4Fs1xOq/view?usp=drivesdk">FAQ2</a></li>
                             <li><a href="https://drive.google.com/file/d/10iu8cDueA0CygqFk54UigoSHsCFmswz5/view?usp=drivesdk">FAQ3</a></li> 
                             <li><a href="https://drive.google.com/file/d/19zhVRIb1PynfDN0HJFccqhd1xPKIVNfV/view?usp=drivesdk">FAQ4</a></li>
@@ -327,7 +326,7 @@ I would also like to mention a few close friends whom I deeply trust. They have 
                         <li><a href="#" onclick="loadPDF('')">  Lagrange undetermined multiplier</a></li>
                         <li><a href="#" onclick="loadPDF('19ZUWpyFPx3a-7ypO_MFWQdYUAuo_BpVW')">  Hamiltonian Mechanics</a></li>
                         <li><a href="#" onclick="loadPDF('19dVUmOAbbvIEklgVKV7Kk-uC8RxR2cKm')">  Poisson bracket</a></li>
-                        <p>For more, please email me.</p>
+                        <p>For more (paid), please email me.</p>
                       </ul>
                     </div>
                   </div>
@@ -438,7 +437,7 @@ I would also like to mention a few close friends whom I deeply trust. They have 
             --->
               <div class="section" id="contact">
                 <h2>Contact</h2>
-                <p>If you would like to get in touch, please contact me via email at <a href="avoyjana2000@gmail.com">avoyjana2000@gmail.com</a>.</p>
+                <p>If you would like to discuss something, please contact me via email at <a href="avoyjana2000@gmail.com">avoyjana2000@gmail.com</a>.</p>
                 <p>Place: </p>
                 <p style="display: flex; justify-content: space-between;">
                      <span>Phone: </span>
