--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 <img src="image.jpeg" alt="photo">
                 <h1>Mr. AVOY JANA</h1>
                 <p> Master in Science, Indian Institute of Technology Delhi, 2023-2025</p>
-                <p> Doctor of Philosophy, </p>
+                <p> Doctor of Philosophy, Indian Institute of Science Education and Research Mohali, 2026-2030  </p>
               </div>
           
               <div class="section" id="introduction">
