--- a/index.html
+++ b/index.html
@@ -298,9 +298,12 @@ I would also like to mention a few close friends whom I deeply trust. They have 
                         <ul>
                             <li>
                               <a href="https://drive.google.com/file/d/1OxZ-C2_35ABMmA0Lu1zshL-_AuoXD7RB/view?usp=drivesdk">FAQ1 (Free)</a> |
-                              <a href="https://drive.google.com/file/d/18qTc-qcF5pcTDjoZiM6Si42_Ef0UxJih/view?usp=drivesdk">FAQ1A (Paid)</a>
+                              <a href="https://drive.google.com/file/d/1T3nv0TBXrtCfME7lc-8PIDP-snX8eSoP/view?usp=drive_link">FAQ1A (Paid)</a>
                             </li>
-                            <li><a href="https://drive.google.com/file/d/14awAWyA45KsipzGV9UL7WvuuY4Fs1xOq/view?usp=drivesdk">FAQ2</a></li>
+                            <li>
+                              <a href="https://drive.google.com/file/d/14awAWyA45KsipzGV9UL7WvuuY4Fs1xOq/view?usp=drivesdk">FAQ2 (Free)</a> |
+                              <a href="https://drive.google.com/file/d/1yMZwHRli2ofvQbXIE8pJ1hFwnFrl2KPe/view?usp=drive_link">FAQ2A (Paid)</a>
+                            </li>
                             <li><a href="https://drive.google.com/file/d/10iu8cDueA0CygqFk54UigoSHsCFmswz5/view?usp=drivesdk">FAQ3</a></li> 
                             <li><a href="https://drive.google.com/file/d/19zhVRIb1PynfDN0HJFccqhd1xPKIVNfV/view?usp=drivesdk">FAQ4</a></li>
                             <li><a href="https://drive.google.com/file/d/1bC1wwgmrpg9ApApqhiOgrSOBbfh_2K00/view?usp=drivesdk">FAQ5</a></li>
