--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <div class="main-container">
             <div class="container">
               <div class="profile">
-                <img src="image.jpeg" alt="photo">
+                <img src="image.jpg" alt="photo">
                 <h1>Mr. AVOY JANA</h1>
                 <p> Master in Science, Indian Institute of Technology Delhi, 2023-2025</p>
                 <p> Doctor of Philosophy, Indian Institute of Science Education and Research Mohali, 2026-2030  </p>
