--- a/index.html
+++ b/index.html
@@ -440,10 +440,10 @@ I would also like to mention a few close friends whom I deeply trust. They have 
             --->
               <div class="section" id="contact">
                 <h2>Contact</h2>
-                <p>If you would like to discuss something, please contact me via email at <a href="avoyjana2000@gmail.com">avoyjana2000@gmail.com</a>.</p>
-                <p>Place: </p>
+                <p>If you would like to discuss something, please feel comfortable.</p>
+                <p>Place: IISER Mohali Hostel 6</p>
                 <p style="display: flex; justify-content: space-between;">
-                     <span>Phone: </span>
+                     <span>Email: <a href="avoyjana2000@gmail.com">avoyjana2000@gmail.com</a></span>
                      <span style="color: blue;">Hosted : 05th March, 2024 Last Updated : 1st Jan, 2026</span>
                 </p>
               </div>
